[tool.poetry]
name = "momentum"
version = "0.1.0"
description = "HACS integration for Home Assistant"
authors = ["Cristian Rubio <cristianrubioa@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.9"
aiohttp = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
voluptuous = "^0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
